Fix mismatched alignments of active item and thumbnail grid.

--- a/components/Gallery.css
+++ b/components/Gallery.css
@@ -1,3 +1,7 @@
+div.gallery {
+	justify-items: left;
+}
+
 .active, img.thumbnail, img.thumbnail-selected {
 	width: 100%;
 	max-width: 100%;
@@ -30,7 +34,7 @@ section.thumbnailgrid {
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	column-gap: 1rem;
-	justify-items: center;
+	justify-items: left;
 }
 
 @media (max-width: 1279px) {
